--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy test-deploy
-on:[push]
+name: Deploy Actions Demo
+on: [push]
 jobs:
   Deploy:
-    runs-on: CentOS
+    runs-on: ubuntu-latest
       steps:
         - uses: appleboy/ssh-action@v0.1.7
           with:
