--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: appleboy/ssh-action@v0.1.7
+      uses: appleboy/ssh-action@v0.1.7
       with:
         host:${{secrets.SSH_HOST}}
         username:${{secrets.SSH_USER}}
