--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     steps:
-      uses: appleboy/ssh-action@v0.1.7
+      - uses: appleboy/ssh-action@v0.1.7
       with:
-        host:${{secrets.SSH_HOST}}
-        username:${{secrets.SSH_USER}}
-        password:${{secrets.SSH_PWD}}
+        host: ${{secrets.SSH_HOST}}
+        username: ${{secrets.SSH_USER}}
+        password: ${{secrets.SSH_PWD}}
