--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,4 +5,12 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-        uses: appleboy/ssh-action@v0.1.7
+      - uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{secrets.SSH_HOST}}
+          username: ${{secrets.SSH_USER}}
+          password: ${{secrets.SSH_PWD}}
+          script_stop: true
+          script: |
+            ls -al
+            touch text.txt
